# fortunamind-persistent-mcp

./: .env.example  .env.production.example  .gitignore  .gitmodules  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  DEVELOPER_EXTENSIBILITY_GUIDE.md  Dockerfile  Dockerfile.http  Dockerfile.render  EASY_INSTALL.md  EPICS_FEATURES_USER_STORIES.md  EXAMPLES.md  FRAMEWORK_SAFETY_GUIDE.md  HTTP_BRIDGE_CONFIGURATION_GUIDE.md  HTTP_SERVER_GUIDE.md  ONBOARDING.md  PRD.md  QUICK_START.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  alembic.ini  claude_desktop_config.json  docker-compose.http.yml  install-fortunamind-persistent.sh  mcp_http_bridge.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  server.py  setup.py  start.sh
.github/ISSUE_TEMPLATE/: epic.md  security-issue.md  user-story.md
.github/workflows/: ci.yml  render-deploy.yml  security-scan.yml
alembic/: env.py
alembic/versions/: 074c54636a56_create_initial_database_schema_for_.py
docs/: deployment-guide.md  persistence-library.md  render-deployment-guide.md
examples/: README.md  claude_desktop_config.json  claude_desktop_integration.py  client_integration.py  subscription_demo.py
scripts/: add_tester.py  get_supabase_credentials.md  setup_production.py  setup_rls_policies.sql  subscription_manager.py  test_connection.py  testers.json
src/: __init__.py  config.py  http_server.py  main.py
src/core/: mock.py
src/fortunamind_persistence/: __init__.py  exceptions.py
src/fortunamind_persistence/adapters/: __init__.py  framework_adapter.py
src/fortunamind_persistence/identity/: __init__.py  email_identity.py
src/fortunamind_persistence/rate_limiting/: __init__.py  limiter.py
src/fortunamind_persistence/storage/: __init__.py  interfaces.py  mock_backend.py  supabase_backend.py
src/fortunamind_persistence/subscription/: __init__.py  models.py  tiers.py  validator.py
src/fortunamind_persistent_mcp/: __init__.py  http_server.py  main.py
src/fortunamind_persistent_mcp/core/: __init__.py  base.py  container.py  mock.py  storage.py  tool_factory.py
src/fortunamind_persistent_mcp/core/security/: __init__.py  patterns.py  scanner.py  validators.py
src/fortunamind_persistent_mcp/framework_proxy/: __init__.py
src/fortunamind_persistent_mcp/persistent_mcp/: __init__.py  server.py
src/fortunamind_persistent_mcp/persistent_mcp/adapters/: __init__.py  mcp_http.py  mcp_stdio.py
src/fortunamind_persistent_mcp/persistent_mcp/auth/: subscriber.py
src/persistent_mcp/: server.py
src/persistent_mcp/adapters/: mcp_http.py  mcp_stdio.py
src/persistent_mcp/auth/: __init__.py  subscriber.py
src/persistent_mcp/storage/: __init__.py  interface.py  mock_backend.py  supabase_backend.py
src/persistent_mcp/tools/: technical_indicators.py  trading_journal.py
static/: mcp_http_bridge.py
tests/: conftest.py  test_framework_integration.py  test_framework_proxy.py  test_safe_framework_usage.py
tests/integration/: test_framework_adapter.py
tests/unit/: test_base_classes.py  test_email_identity.py  test_rate_limiter.py  test_security_scanner.py  test_subscription_validator.py
(+6 files in other folders)
